# esp32-s3-4inch-001-sdk

./: ESP-IDF 编程指南.txt  README.en.md  README.md  UI设计软件下载地址.txt
SquareLine工程/first_SquareLine_Project/: first_SquareLine_Project.sll  first_SquareLine_Project.spj  first_SquareLine_Project_events.py
SquareLine工程/first_SquareLine_Project/assets/: ui_font_Font1.c  ui_font_Font1.fcfg
components/DS18B20/: CMakeLists.txt
components/bsp/: CMakeLists.txt
components/i2c_bsp/: CMakeLists.txt
components/lcd_bsp/: CMakeLists.txt
components/lcd_touch/: CMakeLists.txt
components/lv_port/: CMakeLists.txt
components/lv_port/include/: lv_port_disp.h
components/lvgl/: CMakeLists.txt
components/pwm/: CMakeLists.txt
examples/1.lvgl_v8/: sdkconfig.old
examples/1.lvgl_v8/main/: main.c
examples/2.lvgl_label/: sdkconfig
examples/2.lvgl_label/main/: main.c
examples/3.lvgl_pwm_light/main/: CMakeLists.txt
examples/4.Chinese_font/: sdkconfig
examples/4.Chinese_font/main/: CMakeLists.txt  main.c
examples/5.ds18b20/: filelist.txt  ui_events.c  ui_events.h
examples/5.ds18b20/images/: ui_img_112_png.c  ui_img_121_png.c  (+2 more)
examples/6.RS485/: sdkconfig.old
examples/7.wav_play/: sdkconfig
examples/86box/: CMakeLists.txt  partitions_user.csv  sdkconfig  sdkconfig.old
examples/86box/main/: CMakeLists.txt  main.c
examples/86box/main/app/: espnow_lite.c
examples/86box/main/gui/: lv_example_clockScreen.c  lv_example_func.c  lv_example_func.h  lv_example_second_ctrl.c  lv_example_second_weather.c  lv_example_show_settng.c  lv_example_test.c  lv_example_top_menu.c
(+39 files in other folders)
